<resources>
    <string name="app_name">Shipment Tracker</string>
    <string name="logoText">Sh pment Tracker</string>
    <string name="searchButton">Search</string>
    <string name="trackingIDText">Tracking ID</string>
    <string name="trackingIDText_tracking">Tracking ID:</string>
    <string name="trackingText">Tracking</string>
    <string name="orText">OR</string>
    <string name="loginText">Login</string>
    <string name="ordersText">Orders</string>
    <string name="loginWithGoogleText">Login with Google</string>
    <string name="registrationText">Registration</string>
    <string name="nameText">Name</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="passwordAgainText">Password Again</string>
    <string name="passwordNewText">New Password</string>
    <string name="postcodeText">Postcode</string>
    <string name="cityText">City</string>
    <string name="stateText">State/Province</string>
    <string name="streetText">Street</string>
    <string name="streetNrText">Street Nr.</string>
    <string name="streetTypeText">Street Type</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="carrierText_tracking">Carrier:</string>
    <string name="lastDateText">Last Date:</string>
    <string name="addressText_tracking">Address:</string>
    <string name="backButton">Back</string>
    <string name="country_checkpoint">Country:</string>
    <string name="checkpost_checkpoint">Post:</string>
    <string name="status_checkpoint">Status:</string>
    <string name="date_checkpoint">Date:</string>
    <string name="userDataText">User Data</string>
    <string name="userModifyText">User Modify</string>
    <string name="emailText_user">Email:</string>
    <string name="nameText_user">Name:</string>
    <string name="changeDataButton">Modify Data</string>
    <string name="orderIDText">Order ID:</string>
    <string name="deleteButton">Delete</string>
</resources>