<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
        android:id="@+id/logoText"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:text="@string/logoText"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/logoText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pin" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#CC5A5A"
        android:onClick="searchShipment"
        android:text="@string/searchButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrackingIDText" />

    <EditText
        android:id="@+id/TrackingIDText"
        android:layout_width="300dp"
        android:layout_height="111dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/trackingIDText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/orText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#CC5A5A"
        android:onClick="loginView"
        android:text="@string/loginText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orText" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#CC5A5A"
        android:onClick="registrationView"
        android:text="@string/registrationText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>