<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar_usermodify"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hideLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0">

        <EditText
            android:id="@+id/nameText_modify"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/nameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailText_modify"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/emailText"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText_modify" />

        <EditText
            android:id="@+id/streetTypeText_modify"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/streetTypeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streetText_modify" />

        <EditText
            android:id="@+id/passwordText_modify"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/passwordNewText"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText_modify" />

        <EditText
            android:id="@+id/postcodeNumber_modify"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/postcodeText"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateText_modify" />

        <Button
            android:id="@+id/backButton_modify"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:alpha="0"
            android:backgroundTint="#CC5A5A"
            android:onClick="backButtonView"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/changeDataButton_modify"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CC5A5A"
            android:onClick="modifyUserData"
            android:text="@string/changeDataButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streetTypeText_modify" />

        <EditText
            android:id="@+id/streetText_modify"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/streetText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityText_modify" />

        <EditText
            android:id="@+id/cityText_modify"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/cityText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateText_modify" />

        <EditText
            android:id="@+id/stateText_modify"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/stateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText_modify" />

        <EditText
            android:id="@+id/streetNrText_modify"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:hint="@string/streetNrText"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streetText_modify" />

        <TextView
            android:id="@+id/userModifyText"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userModifyText"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>